--- a/_site.yml
+++ b/_site.yml
@@ -4,7 +4,7 @@ navbar:
   left:
     - text: "Home"
       href: index.html
-    - text: "hospitalization"
+    - text: "Hospitalization"
       href: individualhospitals.html
     - text: "About"
       href: about.html
